Changelog 0.4.17 [20230819]:
- Removed Consumet
- Fixed Audio Preferences

Changelog 0.4.16 [20230819]:
- Added Spanish Sub/Dub Embeds Category
- Added AnimeLatinoHD Provider

Changelog 0.4.15 [20230818]:
- Added "None" as a Subtitle option

Changelog 0.4.14 [20230817]:
- Small Fix for File Size Settings

Changelog 0.4.13 [20230814]:
- Added Universal Embed Catagory
- Moved Aniwatch Embed
- Removed Zoro Embed
- Removed GogoHD Embed
- Made Changes to Aniwatch Defaults

Changelog 0.4.12 [20230814]:
- Added Portuguese Embed
- Added Otaku Animes Provider

Changelog 0.4.11 [20230813]:
- Fix favorites error

Changelog 0.4.10 [20230813]:
- Fix pyaes for Python 3.9+ 

Changelog 0.4.9 [20230813]:
- Added delete from database context menu
- Added reuselanginvoker setting
- Update database for shows on new episodes

Changelog 0.4.8 [20230811]:
- Fixed Artwork Bug
- Fixed Airdates
- Improved Aniwatch search
- Made a couple of File Changes

Changelog 0.4.7 [20230810]:
- Added New Setting "Terminate on Cloud Sources"

Changelog 0.4.6 [20230808]:
- Fix Sphinx clean function 
- Fixed a small bug with Genres

Changelog 0.4.5 [20230807]:
- Improved Anime Tosho Scrapping
- Escape special characters in Sphinx query

Changelog 0.4.4 [20230806]:
- Fixed Aniwatch

Changelog 0.4.3 [20230806]:
- Readded Otaku Themepak

Changelog 0.4.2 [20230805]:
- Removed Otaku Themepak
- Added 2 New Icon Packs
- Made Image Sizes Smaller

Changelog 0.4.1 [20230804]:
- Separated Providers
- Fixed Season Guessing
- Fixed Animetosho Searching

Changelog 0.4.0 [20230803]:
- Added Four New Icon Packs

Changelog 0.3.99 [20230803]:
- Added file Management Size Settings
- Fixed Kodi Language Settings
- Added Rebuild Database On Update Settings

Changelog 0.3.98 [20230729]:
- Added Clean Cache On Update Settings

Changelog 0.3.97 [20230725]:
- Removed Uncategorized Menus
- Made Category Menus for Movies and TV Shows
- Added Movie Search For Movies
- Added TV Search For TV Shows
- Added Movie Genres for Movies